fix fab alignement

--- a/src/components/common/Footer/index.scss
+++ b/src/components/common/Footer/index.scss
@@ -29,17 +29,22 @@ footer#footer {
   .addPageMenu {
     bottom: -3px;
 
-    // Important is necessary, because I'm overriding inline styles
-    button, .smallButton div, .smallButton span {
+    div {
       border-radius: 2px !important;
-      width: 48px !important;
-      height: 48px !important;
 
-      div {
+      // Important is necessary, because I'm overriding inline styles
+      button, .smallButton div, .smallButton span {
+        border-radius: 2px !important;
+        width: 48px !important;
+        height: 48px !important;
 
-        svg:first-child {
+        div {
           height: 100% !important;
-          line-height: 100% !important;
+
+          svg {
+            height: 100% !important;
+            line-height: 100% !important;
+          }
         }
       }
     }
